--- a/Backend/demo/pom.xml
+++ b/Backend/demo/pom.xml
@@ -81,6 +81,12 @@
             <version>0.11.5</version>
         </dependency>
 
+        <!-- Password Hashing dependency -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+
     </dependencies>
 	
 
